Fix crash with renaming